# CPB

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.ja.md  README.md  SECURITY.md  build.bat  build.sh  build_app.bat  carrier.cpp  carrier.hpp  compress_iface.hpp  compress_impl.cpp  container.cpp  container.hpp  container_backend.hpp  cpb_app.cpp  cpb_benchmark_vs_existing.html  cpb_config.hpp  cpb_dict_protocol.cpp  cpb_dict_protocol.hpp  cpb_gui.cpp  cpb_helpers.hpp  cpb_reader.cpp  cpb_train.cpp  dict_evolution.cpp  dict_evolution.hpp  dict_share.cpp  dsl_vm.cpp  dsl_vm.hpp  fourd_map.cpp  fourd_map.hpp  frame_index.cpp  frame_index.hpp  frame_io.hpp  frame_io_soft.hpp  gen_codec.cpp  gen_codec.hpp  (+15 more)
.github/workflows/: build.yml
docs/: docs-index.html  index.html
